--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "webpack": "^4.16.1",
     "webpack-stream": "^5.0.0",
     "yargs": "^12.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1"
   }
 }
